# ---------------------------------------------------------------------------
# SPDX-License-Identifier: EPL-2.0 OR GPL-2.0-or-later
# SPDX-FileCopyrightText: Bradley M. Bell <bradbell@seanet.com>
# SPDX-FileContributor: 2023 Bradley M. Bell
# ---------------------------------------------------------------------------
# cmpad
ADD_EXECUTABLE(cmpad_exe cmpad.cpp)
TARGET_LINK_LIBRARIES(cmpad_exe cmpad)
SET_PROPERTY(TARGET cmpad_exe PROPERTY OUTPUT_NAME cmpad)
